envoy-membersrvc/service-envoy.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:37054",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "route_config": {
              "virtual_hosts": [
                    {
                      "name": "local_service",
                      "domains": [
                        "*"
                      ],
                      "routes": [
                        {
                          "timeout_ms": 0,
                          "prefix": "/",
                          "headers": [
                            {"name": "content-type", "value": "application/grpc"}
                          ],
                          "cluster": "local_service_grpc"
                        }
                      ]
                    }
              ]
            },
            "filters": [
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],
  "admin": {
    "access_log_path": "/dev/null",
    "address": "tcp://0.0.0.0:8001"
  },
  "cluster_manager": {
    "clusters": [
      {
        "name": "local_service_grpc",
        "connect_timeout_ms": 250,
        "type": "static",
        "lb_type": "round_robin",
        "features": "http2",
        "hosts": [
          {
            "url": "tcp://127.0.0.1:7054"
          }
        ]
      }
    ]
  }
}
